--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,6 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
     "**/*.mts"
-  ],
+, "components/login&register/FormInput.jsx", "components/login&register/AuthPage.jsx", "app/auth/login/page.jsx"  ],
   "exclude": ["node_modules"]
 }
